Department mapper, service, repository - refactoring