@@ -1,22 +1,22 @@
 package ru.posmanager.service.bank;
 
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import ru.posmanager.exception.NotFoundException;
 import ru.posmanager.domain.bank.Department;
-import ru.posmanager.repository.bank.DepartmentRepository;
 import ru.posmanager.dto.bank.DepartmentDTO;
+import ru.posmanager.exception.NotFoundException;
+import ru.posmanager.repository.bank.DepartmentRepository;
 import ru.posmanager.util.mappers.DepartmentMapper;
 
-import java.util.Collections;
 import java.util.List;
 
 import static ru.posmanager.util.ValidationUtil.*;
 
+@Slf4j
 @Service
 public class DepartmentService {
     private final DepartmentRepository repository;
-
     private final DepartmentMapper departmentMapper;
 
     public DepartmentService(DepartmentRepository repository, DepartmentMapper departmentMapper) {
@@ -24,28 +24,27 @@ public class DepartmentService {
         this.departmentMapper = departmentMapper;
     }
 
-    public DepartmentDTO create(DepartmentDTO to) {
-        checkNew(to);
-        var department = repository.save(departmentMapper.toEntity(to));
-        return departmentMapper.toDTO(department);
+    public DepartmentDTO create(DepartmentDTO dto) {
+        checkNew(dto);
+        Department saved = repository.save(departmentMapper.toEntity(dto));
+        return departmentMapper.toDTO(saved);
     }
 
     public DepartmentDTO get(int id) {
-        var department = repository.findById(id)
-                .orElseThrow(() -> new NotFoundException(Department.class, id));
+        Department department = repository.findById(id).orElseThrow(() -> new NotFoundException(Department.class, id));
         return departmentMapper.toDTO(department);
     }
 
     public List<DepartmentDTO> getAll() {
-        List<Department> departments = repository.getAll();
-        return departments != null ? departmentMapper.toDTO(departments) : Collections.emptyList();
+        List<Department> departments = repository.getAll().orElse(List.of());
+        return departmentMapper.toDTO(departments);
     }
 
     @Transactional
-    public void update(DepartmentDTO to, int id) {
-        assureIdConsistent(to, id);
+    public void update(DepartmentDTO dto, int id) {
+        assureIdConsistent(dto, id);
         repository.findById(id).orElseThrow(() -> new NotFoundException(Department.class, id));
-        repository.save(departmentMapper.toEntity(to));
+        repository.save(departmentMapper.toEntity(dto));
     }
 
     public void delete(int id) {
